# codemanufaktur-ce-demo

./: .env.example  .gitignore  .mcp.json  FEATURE_STREAMABLE_HTTP.md  GUIDELINES.md  README.md  THIS_PROJECT.md  pyproject.toml  run_server.bat
.claude/: settings.local.json
PRPs/: streamable-http-enhancement.md  supabase-mcp-server.md
PRPs/templates/: prp_base.md
examples/: claude_desktop_http_config.json
src/: __init__.py  database.py  http_transport.py  mcp_server.py  transport_base.py
tests/: __init__.py  test_client.py  test_database.py  test_http_transport.py  test_mcp_server.py
