[project]
name = "supabase-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Supabase database integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.2.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.8.0",
    # HTTP Transport dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
]
